# oop_exercise_06

./: .gitignore  meson.build  meson_options.txt  report.tex
include/: allocator.hpp  figure.hpp  meson.build  point.hpp  stack.hpp  template.hpp  vector.hpp
src/: main.cpp  map.cpp  meson.build
tests/: meson.build  point.hpp-test.cpp  stack.hpp-test.cpp  test_02.t  triangle.hpp-test.cpp
