project_header_files += files('allocator.hpp',
                              'figure.hpp',
                              'point.hpp',
                              'stack.hpp',
                              'template.hpp',
                              'triangle.hpp',
                              'vector.hpp')
